--- a/src/main/resources/templates/buildEmail.html
+++ b/src/main/resources/templates/buildEmail.html
@@ -50,7 +50,11 @@
         <tr>
             <td width="10" valign="middle"><br></td>
             <td style="font-family:Helvetica,Arial,sans-serif;font-size:19px;line-height:1.315789474;max-width:560px">
-                <p style="Margin:0 0 20px 0;font-size:19px;line-height:25px;color:#0b0c0c">Hi <span th:text="${name}"/>,</p><p style="Margin:0 0 20px 0;font-size:19px;line-height:25px;color:#0b0c0c"> Thank you for registering. Please click on the below link to activate your account: </p><blockquote style="Margin:0 0 20px 0;border-left:10px solid #b1b4b6;padding:15px 0 0.1px 15px;font-size:19px;line-height:25px"><p style="Margin:0 0 20px 0;font-size:19px;line-height:25px;color:#0b0c0c"> <a th:href="${link}">Activate Now</a> </p></blockquote> <p>Link will expire in 15 minutes.</p> <p>See you soon</p>
+                <p style="Margin:0 0 20px 0;font-size:19px;line-height:25px;color:#0b0c0c"><span th:text="#{hi} + ' ' + ${name}"/>,</p><p style="Margin:0 0 20px 0;font-size:19px;line-height:25px;color:#0b0c0c">
+                <span th:text="#{thanks.for.register.email}"></span> </p>
+                <blockquote style="Margin:0 0 20px 0;border-left:10px solid #b1b4b6;padding:15px 0 0.1px 15px;font-size:19px;line-height:25px"><p style="Margin:0 0 20px 0;font-size:19px;line-height:25px;color:#0b0c0c"> <a th:text="#{activate.now}" th:href="${link}">Activate Now</a> </p>
+                </blockquote> <p><span th:text="#{link.expire.in}"></span> </p>
+                <p><span th:text="#{see.you.soon}" ></span> </p>
             </td>
             <td width="10" valign="middle"><br></td>
         </tr>
