--- a/src/main/resources/templates/editGame.html
+++ b/src/main/resources/templates/editGame.html
@@ -11,19 +11,26 @@
 <body>
 <div th:insert="~{navbar::navbar}"></div>
 <div class="container mt-4">
-    <h2>Edit Game</h2>
-    <form th:action="@{/game-boot/admin/edit-game}" th:method="POST" th:object="${gameRequest}">
+    <h2 th:text="#{edit.game}" >Edit Game</h2>
+    <form th:action="@{/game-boot/admin/edit-game}" th:method="POST" th:object="${gameRequest}" enctype="multipart/form-data">
         <input type="hidden" th:value="${gameRequest.gameId}" name="gameId">
-        <!-- Назва гри -->
         <div class="form-group">
-            <label for="gameName">Game Name</label>
+            <label th:text="#{game.cover}" for="gameCover">Game Cover</label>
+            <br>
+            <img id="gameCover" th:src="${gameRequest.photoUrl}">
+            <input type="file" id="gamePhoto" name="file" class="form-control-file">
+        </div>
+
+
+        <div class="form-group">
+            <label th:text="#{game.name}" for="gameName">Game Name</label>
             <input type="text" th:value="${gameRequest.name}" th:field="*{name}"  id="gameName" name="name" class="form-control">
             <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
-            <div style="color: red;" th:if="${gameAlreadyExist == 1}">Game with such name already exist</div>
+            <div style="color: red;" th:if="${gameAlreadyExist == 1}" th:text="#{game.already.exist}" ></div>
         </div>
 
         <div class="form-group">
-            <label>Genre</label><br>
+            <label th:text="#{genre}" >Genre</label><br>
             <div th:each="genre : ${session.genres}">
                 <div class="form-check form-check-inline">
                     <input th:field="*{genres}" class="form-check-input" type="checkbox" th:id="'genre_' + ${genre}" th:name="genres" th:value="${genre}">
@@ -34,25 +41,25 @@
         </div>
 
         <div class="form-group">
-            <label for="gamePrice">Price</label>
+            <label th:text="#{price}" for="gamePrice">Price</label>
             <input type="number" th:value="${gameRequest.price}" th:field="*{price}"  id="gamePrice" step="0.01" name="price" class="form-control">
             <div style="color: red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
         </div>
 
         <div class="form-group">
-            <label for="gameYear">Year of Production</label>
+            <label th:text="#{year.of.production}" for="gameYear">Year of Production</label>
             <input type="number" th:value="${gameRequest.yearOfProduction}" th:field="*{yearOfProduction}"  id="gameYear" name="year" class="form-control">
             <div style="color: red" th:if="${#fields.hasErrors('yearOfProduction')}" th:errors="*{yearOfProduction}"></div>
 
         </div>
 
         <div class="form-group">
-            <label for="gameCount">Count</label>
+            <label th:text="#{count}" for="gameCount">Count</label>
             <input type="number" th:value="${gameRequest.count}" id="gameCount" name="count" th:field="*{count}" class="form-control">
             <div style="color: red" th:if="${#fields.hasErrors('count')}" th:errors="*{count}"></div>
         </div>
 
-        <button type="submit" class="btn btn-success">Confirm</button>
+        <button type="submit" th:text="#{confirm}" class="btn btn-success">Confirm</button>
     </form>
 </div>
 
