--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Forgot password</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
@@ -41,22 +40,19 @@
                           role="form">
 
                         <div class="inform-message">
-                            <p><span class="exclamation-mark">&#9888;</span>We will send a password recovery code to the
-                                email address you provided during registration.
-                                Wait for the message and follow the instructions in it.
-                                Enter your username below:</p>
+                            <p><span th:text="'&#9888;' + #{password.recovery.message}" class="exclamation-mark"></span></p>
                         </div>
 
                         <div style="margin-bottom: 25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                             <input id="login-username" type="text" class="form-control" name="username" value=""
-                                   placeholder="Username">
+                                   th:placeholder="#{username}">
                         </div>
 
                         <div style="margin-top:10px" class="form-group">
 
                             <div class="col-sm-12 controls">
-                                <button id="btn-login" class="btn btn-success" type="submit">Send message</button>
+                                <button id="btn-login" th:text="#{send.message}" class="btn btn-success" type="submit">Send message</button>
                             </div>
                         </div>
                     </form>
