--- a/src/main/resources/templates/forgotPasswordTokenVerification.html
+++ b/src/main/resources/templates/forgotPasswordTokenVerification.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Token Verification</title>
     <style>
         body {
@@ -31,22 +36,21 @@
         }
     </style>
 </head>
-
 <body>
 <form th:action="@{/game-boot/registration/verify-token}" th:method="POST">
     <input type="hidden" th:value="${userId}" name="userId"/>
     <div class="confirmation-container">
 
-        <div class="verification-message">Enter the code that we send to <span th:text="${maskedEmail}"></span> email:</div>
+        <div th:text="#{enter.the.code} + ' ' + ${maskedEmail}" class="verification-message"></div>
 
         <div class="divider-line"></div>
 
         <div style="margin-top: 20px;">
-            <input type="text" name="token" placeholder="Enter your code here" required style="width: 100%; padding: 10px; margin-top: 10px;">
+            <input type="text" name="token" required style="width: 100%; padding: 10px; margin-top: 10px;">
         </div>
 
         <div style="margin-top: 20px;">
-            <button type="submit" style="padding: 10px 20px; font-size: 16px; background-color: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer;">Submit</button>
+            <button type="submit" th:text="#{submit}" style="padding: 10px 20px; font-size: 16px; background-color: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer;">Submit</button>
         </div>
     </div>
 </form>
