--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" th:src="@{/js/passwordStrong.js}" th:inline="javascript"></script>
@@ -29,11 +30,21 @@
 </head>
 <body>
 <div class="container">
+        <div class="dropdown pull-right">
+            <button class="btn btn-primary dropdown-toggle" th:text="#{language}" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Language
+            </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
+                <a class="dropdown-item" href="?lang=en">English</a>
+                <a class="dropdown-item" href="?lang=ua">Українська</a>
+            </div>
+        </div>
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info">
             <div class="panel-heading">
                 <div class="panel-title"><i class="fa fa-gamepad" aria-hidden="true"></i> GameBoot</div>
                 <div style="float:right; font-size: 80%; position: relative; top:-10px"><a
+                        th:text="#{forgot.password}"
                         th:href="@{/game-boot/registration/forgot-password}">Forgot password?</a></div>
             </div>
 
@@ -42,7 +53,7 @@
                 <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
 
                 <div th:if="${passwordRecovery == 1}" style="margin-bottom: 25px;">
-                    <p style="color: darkblue;">Password have been successfully changed!</p>
+                    <p th:text="#{password.successfully.changed}" style="color: darkblue;">Password have been successfully changed!</p>
                 </div>
 
                 <form th:action="@{/game-boot/login}" th:method="POST" id="loginform" class="form-horizontal"
@@ -51,13 +62,13 @@
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                         <input id="login-username" type="text" class="form-control" name="username" value=""
-                               placeholder="username">
+                               th:placeholder="#{username}">
                     </div>
 
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                         <input id="login-password" type="password" class="form-control" name="password"
-                               placeholder="password">
+                               th:placeholder="#{password}">
                     </div>
 
 
@@ -65,16 +76,19 @@
 
 
                         <div class="col-sm-12 controls">
-                            <button id="btn-login" class="btn btn-success" type="submit">Login</button>
+                            <button id="btn-login" class="btn btn-success" th:text="#{login}" type="submit">Login</button>
                         </div>
                     </div>
 
 
                     <div class="form-group">
                         <div class="col-md-12 control">
-                            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" th:text="#{do.not.have.account}">
                                 Don't have an account?
-                                <a th:href="@{/game-boot/registration}" >
+                            </div>
+                            <div>
+                                <a th:text="#{sign.up.here}"
+                                   th:href="@{/game-boot/registration}">
                                     Sign Up Here
                                 </a>
                             </div>
