--- a/src/main/resources/templates/passwordRecovery.html
+++ b/src/main/resources/templates/passwordRecovery.html
@@ -16,7 +16,7 @@
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info">
             <div class="panel-heading">
-                <div class="panel-title"><i class="fa fa-gamepad" aria-hidden="true"></i> Password recovery process</div>
+                <div th:text="#{password.recovery.process}" class="panel-title"><i class="fa fa-gamepad" aria-hidden="true"></i> Password recovery process</div>
             </div>
 
             <div style="padding-top:30px" class="panel-body">
@@ -31,13 +31,13 @@
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                         <input data-toggle="popover" title="Password Strength" data-content="Enter Password..." id="password" type="password" class="form-control" name="password"
-                               placeholder="Enter new password">
+                               th:placeholder="#{enter.new.password}">
                     </div>
 
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                         <input id="confirm-password" type="password" class="form-control" name="confirmPassword"
-                               placeholder="Confirm your password">
+                               th:placeholder="#{confirm.your.password}">
                     </div>
 
 
@@ -45,7 +45,7 @@
 
 
                         <div class="col-sm-12 controls">
-                            <button id="btn-login" class="btn btn-success" type="submit">Confirm</button>
+                            <button id="btn-login" th:text="#{confirm}" class="btn btn-success" type="submit">Confirm</button>
                         </div>
                     </div>
 
