--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" th:src="@{/js/passwordStrong.js}" th:inline="javascript"></script>
     <link rel="stylesheet" th:href="@{/css/passwordStrong.css}">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-
     <meta charset="UTF-8">
     <title>Registration</title>
     <style>
@@ -28,12 +27,24 @@
     </style>
 </head>
 <body>
+
+<div class="container">
+    <div class="dropdown pull-right">
+        <button th:text="#{language}" class="btn btn-primary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Language
+        </button>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
+            <a class="dropdown-item" href="?lang=en">English</a>
+            <a class="dropdown-item" href="?lang=ua">Українська</a>
+        </div>
+    </div>
+
 <div id="signupbox" style="margin-top:50px"
      class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
         <div class="panel-heading">
             <div class="panel-title"><i class="fa fa-gamepad" aria-hidden="true"></i> GameBoot</div>
-            <div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" th:href="@{/game-boot/login}">
+            <div th:text="#{sign.in}" style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" th:href="@{/game-boot/login}">
                                                                                        <!--onclick="$('#signupbox').hide(); $('#loginbox').show()"-->Sign
                 In</a></div>
         </div>
@@ -42,40 +53,39 @@
                   role="form" th:object="${registerBody}" >
 
                 <div class="form-group">
-                    <label for="username" class="col-md-3 control-label">Username</label>
+                    <label for="username" th:text="#{username}" class="col-md-3 control-label">Username</label>
                     <div class="col-md-9">
-                        <input type="text" th:field="*{username}" id="username" class="form-control" name="username" placeholder="username">
+                        <input type="text" th:field="*{username}" id="username" class="form-control" name="username" th:placeholder="#{username}">
                         <div style="color: red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-                        <div style="color: red;" th:if="${userNameAlreadyTaken == 1}"> This username already taken</div>
+                        <div style="color: red;" th:if="${userNameAlreadyTaken == 1}" th:text="#{username.already.taken}" ></div>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="email" class="col-md-3 control-label">Email</label>
+                    <label for="email" th:text="#{email}" class="col-md-3 control-label">Email</label>
                     <div class="col-md-9">
-                        <input type="text" th:field="*{email}" id="email" class="form-control" name="email" placeholder="Email Address">
+                        <input type="text" th:field="*{email}" id="email" class="form-control" name="email" th:placeholder="#{email}">
                         <div style="color: red" th:if="${#fields.hasErrors('email')}"  th:errors="*{email}"></div>
-                        <div style="color: red;" th:if="${emailAlreadyTaken == 1}"> This email already taken</div>
+                        <div style="color: red;" th:if="${emailAlreadyTaken == 1}"></div>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="password" class="col-md-3 control-label">Password</label>
+                    <label for="password" th:text="#{password}" class="col-md-3 control-label">Password</label>
                     <div class="col-md-9">
-                        <input type="password" th:field="*{password}"  class="form-control" name="password" id="password" placeholder="Password" data-toggle="popover" title="Password Strength" data-content="Enter Password...">
+                        <input type="password" th:field="*{password}"  class="form-control" name="password" id="password" th:placeholder="#{password}" data-toggle="popover" title="Password Strength" data-content="Enter Password...">
                         <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
                     </div>
                 </div>
 
 
                 <div class="registration-message">
-                    <p><span class="exclamation-mark">&#9888;</span>To complete the registration, you will need to
-                        confirm your email. Wait for the message and follow the instructions in it.</p>
+                    <p><span th:text="'&#9888;' + #{complete.registration.message}" class="exclamation-mark"></span></p>
                 </div>
 
                 <div class="form-group">
                     <div class="col-md-offset-3 col-md-9">
-                        <button id="btn-signup" type="submit" class="btn btn-info"><i class="icon-hand-right"></i> &nbsp
+                        <button th:text="#{sign.up}" id="btn-signup" type="submit" class="btn btn-info"><i class="icon-hand-right"></i> &nbsp
                             Sign Up
                         </button>
                     </div>
@@ -83,6 +93,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 </body>
 </html>
