--- a/src/main/resources/templates/viewUsersSearchResult.html
+++ b/src/main/resources/templates/viewUsersSearchResult.html
@@ -39,11 +39,11 @@
     <table class="table">
         <thead>
         <tr>
-            <th th:sort="${'username'}"><a th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=username)}">Username</a></th>
-            <th th:sort="${'email'}"><a th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=email)}">Email</a></th>
-            <th th:sort="${'balance'}"><a th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=balance)}">Balance</a></th>
-            <th th:sort="${'role'}"><a th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=role)}">Role</a></th>
-            <th>Action</th>
+            <th th:sort="${'username'}"><a th:text="#{username}" th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=username)}">Username</a></th>
+            <th th:sort="${'email'}"><a th:text="#{email}" th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=email)}">Email</a></th>
+            <th th:sort="${'balance'}"><a th:text="#{balance}" th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=balance)}">Balance</a></th>
+            <th th:sort="${'role'}"><a th:text="#{role}" th:href="@{/game-boot/admin/search(criteria=${criteria}, sort=role)}">Role</a></th>
+            <th th:text="#{action.game.page}">Action</th>
         </tr>
         </thead>
         <tbody>
@@ -53,9 +53,10 @@
             <td th:text="${u.balance}"></td>
             <td th:text="${u.role}"></td>
             <td sec:authorize="hasAuthority('ADMIN')" th:if="${u.role.name.equalsIgnoreCase('USER')}">
-                <button data-toggle="modal" th:attr="data-target='#confirmAdminModal' + ${u.userId}"
+                <button th:text="#{promote.to.admin}" data-toggle="modal" th:attr="data-target='#confirmAdminModal' + ${u.userId}"
                         style="color: blue; outline: none; border: none;">
-                    <i class="fa fa-caret-square-o-up" aria-hidden="true"></i> Promote to admin
+                    <i class="fa fa-caret-square-o-up" aria-hidden="true"></i>
+                    <span th:text="#{promote.to.admin}" ></span>
                 </button>
             </td>
             <div class="modal fade" th:id="'confirmAdminModal' + ${u.userId}" tabindex="-1" aria-labelledby="confirmAdminModalLabel"
@@ -63,7 +64,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="confirmAdminModalLabel">Promote to Admin</h5>
+                            <h5 th:text="#{promote.to.admin}" class="modal-title" id="confirmAdminModalLabel">Promote to Admin</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -71,16 +72,16 @@
                         <div class="modal-body">
                             <div style="display: flex; align-items: center; color: red;">
                                 <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-                                <span style="margin-left: 10px;">This operation is irreversible.</span>
+                                <span th:text="#{irreversible.operation}" style="margin-left: 10px;">This operation is irreversible.</span>
                             </div>
-                            <p>Are you sure you want to promote <strong th:text="${u.username}"></strong> to admin?</p>
-                            <p>Email: <strong th:text="${u.email}"></strong></p>
+                            <p> <span th:text="#{you.want.promote}"></span> <strong th:text="${u.username}"></strong><span th:text="#{to.admin} + '?'"></span> </p>
+                            <p><span th:text="#{email} + ': '"></span><strong th:text="${u.email}"></strong></p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="button" th:text="#{cancel}" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                             <form id="promotionForm" th:method="POST" th:action="@{/game-boot/admin/promote-to-admin}">
                                 <input type="hidden" name="email" th:value="${u.email}">
-                                <button type="submit" class="btn btn-primary">Confirm</button>
+                                <button type="submit" th:text="#{confirm}" class="btn btn-primary">Confirm</button>
                             </form>
                         </div>
                     </div>
